--- a/views/page/home.ejs
+++ b/views/page/home.ejs
@@ -4,23 +4,12 @@
 	<h1>FEEL THE PROGRESS</h1>
 	<p>PowerUp helps you achieve your goals by giving you simple, visual tools to track each step along the way.</p>
 	
-	<a href="/getting-started">GET STARTED</a>
-	<form action="/sign_up" method="post">
-		<div>
-			<label>Email</label>
-			<input name="user[email]" type="text" class="text" />
-		</div>
-		<div>
-			<label>Password</label>
-			<input name="user[password]" type="password" class="text" />
-		</div>
-		<div class="center">
-		<button type="submit">
-			<img src="/img/icon_white.png" />
-			GET STARTED
-		</button>
-		</div>
-	</form>
+	<p>The next <strong><%= freebies %> signups</strong> get free premium accounts for life!</p>
+	
+	<a href="/getting-started" class="button">
+		<img src="/img/icon_white.png" width="30" height="26" />
+		GET STARTED
+	</a>
 </div>
 
 <% include ../partials/footer.ejs %>
