--- a/views/page/home.ejs
+++ b/views/page/home.ejs
@@ -4,7 +4,7 @@
 	<h1>FEEL THE PROGRESS</h1>
 	<p>PowerUp helps you achieve your goals by giving you simple, visual tools to track each step along the way.</p>
 	
-	<p>The next
+	<p class="freebies">The next
 	<% for(var i=0;i<freebies.length;i++){ %>
 		<strong><%= freebies[i] %></strong>
 	<% } %>
@@ -17,3 +17,35 @@
 </div>
 
 <% include ../partials/footer.ejs %>
+
+<script>
+	var freebies = "<%= freebies %>";
+	$(function(){
+		setInterval(function(){
+			freebieCounter();
+		},5000);
+		
+		function freebieCounter(){
+			freebies -= 1;
+			freebies += ""; //makes freebies a string
+	    if(freebies.length<2){
+	      freebies = "00"+freebies;
+	    }else if(freebies.length<3){
+	      freebies = "0"+freebies;
+	    }
+			for(var i=0;i<freebies.length;i++){
+				var elem = $('.freebies strong:eq('+i+')');
+				var currentNum = elem.text();
+				var newNum = freebies[i];
+				if(currentNum != newNum){
+					elem.toggleClass('flip');
+					(function(elem,i){
+						setTimeout(function(){
+							elem.text(freebies[i]);
+						},200);
+					})(elem,i);
+				}
+			}
+		}
+	});
+</script>
