--- a/views/page/contact.ejs
+++ b/views/page/contact.ejs
@@ -1,5 +1,6 @@
 <% include ../partials/head.ejs %>
 
+<h1>Contact</h1>
 <div class="content">
 	<p>No matter if you're here to track your workouts or finish a project that has been sitting on the back burner for the last year, we want to help you reach your goals.</p>
 	<p>Get <a target="_blank" href="mailto:help@powerup.io">help@powerup.io</a> whenever you have any problems, questions, comments or ideas. We're a small team but we'll get back to you as soon as we can.</p>
