--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,8 +2,8 @@
 	
 	<div id="nav">
 		<a href="/getting-started">Getting Started</a>
-		<a href="/">FAQ</a>
-		<a href="/">Press</a>
+		<a href="/faq">FAQ</a>
+		<a href="/press">Press</a>
 		<a href="/">Blog</a>
 		<a href="/contact">Contact</a>
 	</div>
