--- a/views/grid/show.ejs
+++ b/views/grid/show.ejs
@@ -18,7 +18,7 @@
 	  <% for (var i = 0; i < grid.gridButtons.length; i++) { %>
 			<button class="powerup <%= colors[i] %>" data-powerup-num="<%= i + 1 %>">
 				<span class="plus"></span>
-				<span><%= grid.gridButtons[i].increment %> <%= grid.gridButtons[i].workUnit %></span>
+				<span><%= grid.gridButtons[i].workUnit %></span>
 			</button>
 		<% } %>
 	</div>
