--- a/views/partials/grid_mini_form.ejs
+++ b/views/partials/grid_mini_form.ejs
@@ -12,9 +12,9 @@
   
   <div class="field">
 		<label>WORK UNITS</label>
-    <input type="text" name="workUnit" value="10 Push-Ups" class="small work_unit" />
-		<input type="text" class="small work_unit" value="20 Sit-Ups" />
-		<input type="text" class="small last work_unit" value="Run 10 Minutes" />
+    <input type="text" name="workUnit[]" value="10 Push-Ups" class="small work_unit" />
+		<input type="text" name="workUnit[]" class="small work_unit" value="20 Sit-Ups" />
+		<input type="text" name="workUnit[]" class="small last work_unit" value="Run 10 Minutes" />
   </div>
   
   <% if (typeof currentUser === 'undefined') { %>
