--- a/views/grid/show.ejs
+++ b/views/grid/show.ejs
@@ -16,7 +16,7 @@
 	<div class="legend">
 	  <% var colors = ['black', 'blue', 'red']; %>
 	  <% for (var i = 0; i < grid.gridButtons.length; i++) { %>
-			<button class="powerup <%= colors[i] %>" data-powerup-num="<%= i + 1 %>">
+			<button class="powerup <%= colors[i] %>" data-powerup-num="<%= grid.gridButtons[i].increment %>" data-color="<%= colors[i] %>">
 				<span class="plus"></span>
 				<span><%= grid.gridButtons[i].workUnit %></span>
 			</button>
