--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -2,6 +2,7 @@ body {
   background:url('/img/maui.jpg') no-repeat center top;
   background:url('/img/bg_4.png');
   background:url('/img/bg_3.jpg') no-repeat center top;
+  background:url('/img/country-road.jpg') no-repeat center top;
   background-size: 100% auto;
   background-size:auto;
   background-size: cover;
