set promo.zed flag on first 500 users

--- a/views/page/home.ejs
+++ b/views/page/home.ejs
@@ -46,7 +46,7 @@
 	
 	$(function(){
 		var socket = io.connect('http://localhost');
-    socket.on('promo.freebie', function (data) {
+    socket.on('promo.zed', function (data) {
 		  freebieCounter();
 	  });
 	});
