--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,13 @@
 	</div>
 	
 	<div id="nav">
+		<a class="right" target="_blank" href="http://twitter.com/powerupio">Twitter</a>
+		<a class="right" target="_blank" href="#">G+</a>
 		<a href="/getting-started">Getting Started</a>
 		<a href="/faq">FAQ</a>
 		<a href="/press">Press</a>
-		<a href="/">Blog</a>
+		<a href="/contribute">Contribute</a>
+		<a href="/terms">Terms</a>
 		<a href="/contact">Contact</a>
 	</div>
 </body>
