--- a/public/css/style.css
+++ b/public/css/style.css
@@ -211,12 +211,11 @@ form label {
   left:0;
   height:40px;
   background:rgba(0,0,0,.6);
+  z-index:2000;
 }
 
 #nav a {
   color:rgba(255,255,255,.6);
-  display:block;
-  width:20%;
   height:40px;
   line-height:40px;
   font-size:14px;
@@ -224,9 +223,14 @@ form label {
   text-decoration:none;
   letter-spacing:1px;
   float:left;
+  padding:0 10px;
 }
 
 #nav a:hover {
   color:#fff;
-  background:rgba(111,11,11,.75);
+  background:rgba(0,0,0,.75);
+}
+
+#nav a.right {
+  float:right;
 }
