--- a/views/page/getting-started.ejs
+++ b/views/page/getting-started.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/head.ejs %>
 
 <div class="share">
-	<a href="/"><img src="/img/twitter.png"></a>
+	<a target="_blank" href="https://twitter.com/share?url=https%3A%2F%2Fpowerup.io%2Fgetting-started&related=powerupio&text=New%20app%20to%20help%20you%20reach%20your%20goals.%20First%20500%20signups%20get%20free%20premium%20accounts%20for%20life!"><img src="/img/twitter.png"></a>
 	<a href="/"><img src="/img/facebook.png"></a>
 	<a href="/"><img src="/img/google+.png"></a>
 </div>
