--- a/public/css/style.css
+++ b/public/css/style.css
@@ -243,3 +243,14 @@ form label {
 #nav a.right {
   float:right;
 }
+
+.twitter-share-button {
+  display:block;
+  width:40px;
+  height:40px;
+  background:url('/img/twitter.png') no-repeat;
+  background-size: cover;
+  position:relative;
+  text-indent:-999px;
+  overflow:hidden;
+}
