g+ and facebook shares

--- a/views/page/getting-started.ejs
+++ b/views/page/getting-started.ejs
@@ -1,9 +1,11 @@
 <% include ../partials/head.ejs %>
 
 <div class="share">
-	<a target="_blank" href="https://twitter.com/share?url=https%3A%2F%2Fpowerup.io%2Fgetting-started&related=powerupio&text=New%20app%20to%20help%20you%20reach%20your%20goals.%20First%20500%20signups%20get%20free%20premium%20accounts%20for%20life!"><img src="/img/twitter.png"></a>
-	<a href="/"><img src="/img/facebook.png"></a>
-	<a href="/"><img src="/img/google+.png"></a>
+	<a target="_blank" href="https://twitter.com/share?url=http%3A%2F%2Fpowerup.io%2Fgetting-started&related=powerupio&text=New%20app%20to%20help%20you%20reach%20your%20goals.%20First%20500%20signups%20get%20free%20premium%20accounts%20for%20life!"><img src="/img/twitter.png"></a>
+	
+	<a target="_blank" href="http://www.facebook.com/sharer.php?p[title]=PowerUp%3A%20Feel%20The%20Progress&p[summary]=PowerUp%20helps%20you%20achieve%20your%20goals%20by%20giving%20you%20simple%2C%20visual%20tools%20to%20track%20each%20step%20along%20the%20way.&p[url]=http%3A%2F%2Fpowerup.io%2Fgetting-started&p[images][0]=http%3A%2F%2Fpowerup.io%2Fimg%2Ficon_powerup.png"><img src="/img/facebook.png"></a>
+	 
+	<a target="_blank" href="https://plus.google.com/share?url=http%3A%2F%2Fpowerup.io%2Fgetting-started"><img src="/img/google+.png"></a>
 </div>
 
 <h1>START POWERING UP</h1>
