--- a/views/grid/index.ejs
+++ b/views/grid/index.ejs
@@ -1,3 +1,5 @@
+<% include ../partials/head.ejs %>
+
 <div class="grids">
   <h1>Grids</h1>
   <div class="new-grid"><a href="/grids/new">New grid</a></div>
@@ -11,3 +13,5 @@
     </div>
   <% } %>
 </div>
+
+<% include ../partials/footer.ejs %>
