--- a/views/partials/settings_form.ejs
+++ b/views/partials/settings_form.ejs
@@ -21,5 +21,8 @@
     <input type="password" name="user[password]" class="required" value="<%= user.password || '' %>" />
   </div>
   
+	<ul class="right links">
+		<li><a href="/sign_out">Sign out</a></li>
+	</ul>
 	<button type="submit" class="submit">Submit</button>
 </form>
