--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -56,3 +56,9 @@
 		</div>
 	</div>
 	<div id="page">
+	  <% if (typeof flash !== 'undefined') { %>
+	    <% for (msg in flash) { %>
+  	    <p class="flash <%- msg %>"><%- flash[msg] %></p>
+  	    <% delete flash[msg]; %>
+  	  <% } %>
+	  <% } %>
