static socket file

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -15,7 +15,7 @@
 	<% } %>
 	
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
-	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+	<script type="text/javascript" src="/js/socket.io.js"></script>
 	<script type="text/javascript" src="/js/jquery.easing.js"></script>
 	<script type="text/javascript" src="/js/actions.js"></script>
 	
