--- a/views/page/home.ejs
+++ b/views/page/home.ejs
@@ -45,7 +45,8 @@
 	}
 	
 	$(function(){
-		var socket = io.connect('http://localhost');
+	  var uri = "http://" + window.location.host;
+		var socket = io.connect(uri);
     socket.on('promo.zed', function (data) {
 		  freebieCounter();
 	  });
