--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,7 +7,7 @@
 		<a href="/faq">FAQ</a>
 		<a href="/press">Press</a>
 		<a href="/contribute">Contribute</a>
-		<a href="/terms">Terms</a>
+		<a href="/tos">TOS</a>
 		<a href="/contact">Contact</a>
 	</div>
 </body>
