--- a/views/grid/show.ejs
+++ b/views/grid/show.ejs
@@ -12,17 +12,21 @@
 		<h1><%= grid.name %></h1>
 	</div>
 	
+	<% var gridClass = "disabled"; %>
 	<% if(currentUser && String(grid.user._id) == String(currentUser._id)){ %>
-		<div class="legend">
-		  <% var colors = ['black', 'blue', 'red']; %>
-		  <% for (var i = 0; i < grid.gridButtons.length; i++) { %>
-				<button class="powerup <%= colors[i] %>" data-powerup-num="<%= grid.gridButtons[i].increment %>" data-color="<%= colors[i] %>">
-					<span class="plus"></span>
-					<span><%= grid.gridButtons[i].workUnit %></span>
-				</button>
-			<% } %>
-		</div>
+		<% gridClass = ""; %>
 	<% } %>
+	<div class="legend">
+	  <% var colors = ['black', 'blue', 'red']; %>
+	  <% for (var i = 0; i < grid.gridButtons.length; i++) { %>
+			<button class="powerup <%= colors[i] %> <%= gridClass %>" data-powerup-num="<%= grid.gridButtons[i].increment %>" data-color="<%= colors[i] %>">
+				<% if(gridClass != "disabled"){ %>
+					<span class="plus"></span>
+				<% } %>
+				<span><%= grid.gridButtons[i].workUnit %></span>
+			</button>
+		<% } %>
+	</div>
 
 	<div class="progress"></div>
 	
