--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,6 +8,8 @@
 	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="/css/style.css" />
+	
+	<meta name="google-site-verification" content="QJ-ldZtwOYjEzAXSHRLQKb40HuYRrzpa3HjlZ-pF8YU" />
 	<% if(typeof(stylesheets) !== 'undefined'){ %>
 		<% for(stylesheet in stylesheets){ %>
 			<link rel="stylesheet" type="text/css" href="/css/<%= stylesheets[stylesheet] %>.css" />
