--- a/views/grid/show.ejs
+++ b/views/grid/show.ejs
@@ -42,8 +42,12 @@
 
 		<a target="_blank" href="https://plus.google.com/share?url=<%- share_url %>"><img src="/img/google+.png"></a>
 	</div>
-</div>
 	
+	<div class="collaborate">
+    <div class="expand button">COLLABORATE</div>
+  </div>
+</div>
+
 <% include ../partials/footer.ejs %>
 
 <script type="text/javascript" src="/js/grid.js"></script>
