--- a/views/page/home.ejs
+++ b/views/page/home.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/head.ejs %>
 
 <div id="sidebar">
-	<h1>FEEL THE PROGRESS</h1>
+	<h1>TRACK YOUR PROGRESS</h1>
 	<p>PowerUp helps you achieve your goals by giving you simple, visual tools to track each step along the way.</p>
 	
 	<p class="freebies">The next
