--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -3,9 +3,11 @@ body {
   background:url('/img/bg_4.png');
   background:url('/img/bg_3.jpg') no-repeat center top;
   background:url('/img/country-road.jpg') no-repeat center top;
+  background:url('/img/bg_2.png');
   background-size: 100% auto;
   background-size:auto;
   background-size: cover;
+  background-size:auto;
 }
 
 #content {
